# ThumbnailCreator

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
scripts/: linux-build.sh
src/: App.cxx  CMakeLists.txt  Canvas.cxx  FileManager.cxx  Layer.cxx  LayerHandler.cxx  UI.cxx  Window.cxx
